--- a/Module4/index.html
+++ b/Module4/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="utf-8">
   <title></title>
-  <script src="hello.js"></script>
-  <script src="goodbye.js"></script>
-  <script src="script.js"></script>
+  <script src="js/hello.js"></script>
+  <script src="js/goodbye.js"></script>
+  <script src="js/script.js"></script>
 </head>
 <body>
   <h1>Module 4 Solution Starter</h1>
 </body>
-</html
+</html>
